Burn down simulate API contract debt
